clang/test/BSC/Negative/Trait/r3/define_trait_var_err/define_trait_var_err.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F {
  int foo(This* this);
};

_Trait a; // expected-error {{invalid syntax, semi not expected after '_Trait a'}}

int main() {
  _Trait a; // expected-error {{invalid syntax, semi not expected after '_Trait a'}}
  return 0;
}